clusters/cl01tl/manifests/paperless-ngx/HTTPRoute-paperless-ngx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: paperless-ngx
    helm.sh/chart: paperless-ngx-5.3.0
  namespace: paperless-ngx
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "paperless-ngx.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: paperless-ngx
          namespace: paperless-ngx
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
